--- a/templates/beers.html
+++ b/templates/beers.html
@@ -37,6 +37,7 @@
                           </a>
                           <ul class="dropdown-menu">
                               <li><a class="dropdown-item" href="/panier">Panier [{{nb}}]</a></li>
+                              <li><a class="dropdown-item" href="/order">Historique de commande</a></li>
                               <li><hr class="dropdown-divider"></li>
                               <li><form action="/logout" method="post" class="dropdown-item" ><button class="btn btn-outline-dark" type="submit" >Se déconnecter</button>
                                   <!-- Logout button -->
