--- a/templates/beers_macro.html
+++ b/templates/beers_macro.html
@@ -49,7 +49,7 @@
     </tr>
     {%endif%}
 {% endmacro %}
-{% macro show_beers(id, name, brewery, price, stock, description, quantity=1) %}
+{% macro show_beers(id, name, brewery, price, stock, description, quantity) %}
 <!-- Define a macro named show_books with parameters for book information -->
     <tr>
     <!-- Start a table row -->
