--- a/templates/modify.html
+++ b/templates/modify.html
@@ -12,7 +12,7 @@
 
 <div class="container border rounded-4 border-2 p-4 mb-4 border-opacity-75" style=" width: 50%">
     <!-- Container for modifying beer -->
-    <h2 class="display-6 text-center">Modifier le livre</h2><br>
+    <h2 class="display-6 text-center">Modifier la bière</h2><br>
     <!-- Title for modifying beer section -->
     <form action="/modify/{{beer.id}}" method="post">
         <!-- Form for modifying beer -->
