--- a/templates/order.html
+++ b/templates/order.html
@@ -33,11 +33,10 @@
                 {% endif %}
                     <li class="nav-item dropdown" >
                         <a class="nav-link dropdown-toggle " style="color: #BA4A00;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            [{{nb}}] Bonjour Mr/Mlle {{current_user.name}}
+                           [{{nb}}] Bonjour Mr/Mlle {{current_user.name}}
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/panier">Panier</a></li>
-                            <li><a class="dropdown-item" href="/order">Historique de commande</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><form action="/logout" method="post" class="dropdown-item" ><button class="btn btn-outline-dark" type="submit" >Se déconnecter</button>
                                 <!-- Logout button -->
@@ -55,27 +54,49 @@
         
     </div>
 </nav>
-<br>
-<div class="container border rounded-4 border-2 p-4 mb-4 border-opacity-75" style=" width: 50%; color: #BA4A00">
-    <h2 class="display-6 text-center">Profil - {{ current_user.group }}</h2><br>
-    <form action="/profile" method="post">
-        <div class="input-group mb-3">
-            <label for="name" class="input-group-text">Nom</label>
-            <input type="text" id="name" class="form-control" name="name" value="{{current_user.name}}" required="true"/>
-        </div>
-        <div class="input-group mb-3">
-            <label for="surname" class="input-group-text">Prénom</label>
-            <input type="text" id="surname" class="form-control" name="surname" value="{{current_user.surname}}" required="true"/>
-        </div>
-        <div class="input-group mb-5">
-            <label for="username" class="input-group-text">Nom d'utilisateur</label>
-            <input type="text" id="username" class="form-control" name="username" value="{{current_user.username}}" required="true"/>
-        </div>
-        <div class="grid text-center">
-            <a href="/new_mdp"><button type="button" class="btn btn-outline-dark">Changer de mot de passe</button></a>
-            <button type="submit" class="btn btn-outline-dark">Modifier le profil</button>
-        </div>
-    </form>
-    
+
+<div class="container">
+    <h1>Historique des commandes de {{ current_user.username }}</h1>
+    <table class="table table-hover text-center" style="height: 150px; vertical-align: middle;">
+        <thead>
+            <tr>
+                <th>ID Commande</th>
+                <th>Date</th>
+                <th>Prix Total</th>
+                <th>Détails</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for order in orders %}
+                <tr>
+                    <td>{{ order.order_id }}</td>
+                    <td>{{ order.created_at }}</td>
+                    <td>{{ order.total_price }}</td>
+                    <td>
+                        <table class="table table-hover text-center">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Brewery</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for item in order.items %}
+                                    <tr>
+                                        <td>{{ item.beer.name }}</td>
+                                        <td>{{ item.beer.brewery }}</td>
+                                        <td>{{ item.beer.price }}</td>
+                                        <td>{{ item.quantity }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% endblock %}
